<resources>
    <string name="app_name">EventCity</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="login_no_account">No account yet? Create one</string>
    <string name="signup_already">Already a member? Login</string>

    <string name="user_rankings_image">User rankings table image</string>

    <string name="title_activity_signup">Create new account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">First and Last Name</string>
    <string name="prompt_phone">Your phone number</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_take_picture">Take picture</string>
    <string name="title_activity_main">EventCity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_ip">IP settings</string>

    <string name="nav_section_places">Places</string>
    <string name="nav_section_social">Social</string>
    <string name="nav_section_rank">Rank</string>

    <string name="menu_item_add">Add new event</string>
    <string name="menu_item_bluetooth">Pair with friends</string>
    <string name="menu_item_search">Search nearby objects</string>
    <string name="menu_item_category">Search by category</string>
    <string name="menu_item_ranking">View user rankings</string>
    <string name="menu_item_friends">Show friends on map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_bluetooth">Bluetooth</string>

    <string name="pref_title_enable_bluetooth">Enable bluetooth</string>

    <string name="pref_title_display_name">Display name</string>

    <string name="pref_title_add_friends_to_messages">Visibility timeout</string>
    <string-array name="pref_duration_list_titles">
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>No limit</item>
    </string-array>
    <string-array name="pref_duration_list_values">
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>0</item>
    </string-array>


    <string name="pref_header_ip_address">Configure IP address</string>
    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_service_notifications">Enable service</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <!-- Bluetooth form -->
    <string name="bluetooth_paired">Paired devices</string>
    <string name="bluetooth_discovered">Discovered devices</string>
    <string name="disc_devices">Discover more devices</string>

    <string name="preference_file_key">217.mosis.PREFERENCE_FILE_KEY</string>
    <string name="stored_username">Username</string>
    <string name="stored_name">Name</string>
    <string name="stored_phone">Phone</string>
    <string name="stored_points">Points</string>
    <string name="stored_download">DownloadInfo</string>
    <string name="stored_geofence">GeofenceAdded</string>
    <string name="title_activity_user_rankings">User Rankings</string>

    <string name="rankings_rank">Rank</string>
    <string name="rankings_image">Image</string>
    <string name="rankings_user_info">User info</string>
    <string name="rankings_points">Points</string>
    <string name="title_activity_user_info">User info</string>
    <string name="title_activity_nearby_search">Search nearby events</string>

    <string name="nearby_search_button">Search</string>
    <string name="prompt_nearby_search">Enter search radius</string>

    <string name="title_activity_new_event">Add new event</string>
    <string name="new_event_name_hint">Name of event</string>
    <string name="new_event_about_hint">About event</string>
    <string name="new_event_type_hint">Select type of event</string>
    <string name="new_event_deadline_hint">Select deadline of event</string>
    <string name="new_event_button_hint">Add event</string>

    <string name="title_activity_ipaddress">Set IP address</string>
    <string name="ipactivity_ip">Enter new server IP address</string>
    <string name="ipactivity_port">Enter new server port number</string>
    <string name="ipactivity_button">Save configuration</string>

    <string name="title_activity_event_info">Event info</string>
    <string name="event_info_name">Event name: \n</string>
    <string name="event_info_category">Category: \n</string>
    <string name="event_info_about">About this event: \n</string>
    <string name="event_info_deadline">Deadline: \n</string>
    <string name="event_info_button">Check in</string>

    <string name="category_activity_title">Choose category</string>
    <string name="category_activity_button">Search</string>

    <string name="geofence_transition_entered">GEOFENCE_TRANSITION_ENTERED</string>
    <string name="geofence_transition_exited">GEOFENCE_TRANSITION_EXITED</string>
    <string name="geofence_transition_dwell">GEOFENCE_TRANSITION_DWELL</string>
    <string name="unknown_geofence_transition">UNKNOWN_GEOFENCE_TRANSITION</string>
    <string name="geofence_transition_notification_text">Geofence transition happened</string>
</resources>
