<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_section_places">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add_location_white_24dp"
                android:title="@string/menu_item_add" />
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_near_me_white_24dp"
                android:title="@string/menu_item_search" />
            <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_find_in_page_white_24dp"
                android:title="@string/menu_item_category" />
        </menu>
    </item>

    <item
        android:checkable="false"
        android:title="@string/nav_section_social">
        <menu>
            <item
                android:id="@+id/nav_bluetooth"
                android:icon="@android:drawable/stat_sys_data_bluetooth"
                android:title="@string/menu_item_bluetooth" />
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_supervisor_account_white_24dp"
                android:title="@string/menu_item_friends" />
        </menu>
    </item>

    <item
        android:checkable="false"
        android:title="@string/nav_section_rank">
        <menu>
            <item
                android:id="@+id/nav_ranking"
                android:icon="@drawable/ic_line_weight_white_24dp"
                android:title="@string/menu_item_ranking" />
        </menu>
    </item>

</menu>
